issue #10993 - feat: added ability to parse preferred-citation field to CffImporter