@@ -18,6 +18,7 @@ import org.jabref.model.entry.field.BiblatexSoftwareField;
 import org.jabref.model.entry.field.Field;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.field.UnknownField;
+import org.jabref.model.entry.types.EntryType;
 import org.jabref.model.entry.types.StandardEntryType;
 
 import com.fasterxml.jackson.annotation.JsonAnySetter;
@@ -44,7 +45,8 @@ public class CffImporter extends Importer {
 
     @Override
     public String getDescription() {
-        return "Importer for the CFF format. Is only used to cite software, one entry per file.";
+        return "Importer for the CFF format. Is only used to cite software, one entry per file. Can also " +
+                "cite a preferred citation.";
     }
 
     // POJO classes for yaml data
@@ -56,6 +58,9 @@ public class CffImporter extends Importer {
 
         @JsonProperty("identifiers")
         private List<CffIdentifier> ids;
+
+        @JsonProperty("preferred-citation")
+        private CffPreferredCitation citation;
 
         public CffFormat() {
         }
@@ -88,43 +93,55 @@ public class CffImporter extends Importer {
         }
     }
 
+    private static class CffPreferredCitation {
+        private final HashMap<String, String> values = new HashMap<>();
+
+        @JsonProperty("type")
+        private String type;
+
+        @JsonProperty("authors")
+        private List<CffAuthor> authors;
+
+        public CffPreferredCitation() {
+        }
+
+        @JsonAnySetter
+        private void setValues(String key, String value) {
+            values.put(key, value);
+        }
+    }
+
     @Override
     public ParserResult importDatabase(BufferedReader reader) throws IOException {
         ObjectMapper mapper = new ObjectMapper(new YAMLFactory());
         CffFormat citation = mapper.readValue(reader, CffFormat.class);
+        List<BibEntry> entriesList = new ArrayList<>();
+
+        // Retrieve mappings from CFF to JabRef
+        HashMap<String, Field> fieldMap = getFieldMappings();
+        HashMap<String, EntryType> typeMap = getTypeMappings();
+
+        // Parse main entry
         HashMap<Field, String> entryMap = new HashMap<>();
-        StandardEntryType entryType = StandardEntryType.Software;
+        EntryType entryType = typeMap.getOrDefault(citation.values.get("type"), StandardEntryType.Software);
 
         // Map CFF fields to JabRef Fields
-        HashMap<String, Field> fieldMap = getFieldMappings();
         for (Map.Entry<String, String> property : citation.values.entrySet()) {
             if (fieldMap.containsKey(property.getKey())) {
                 entryMap.put(fieldMap.get(property.getKey()), property.getValue());
-            } else if ("type".equals(property.getKey())) {
-                if ("dataset".equals(property.getValue())) {
-                    entryType = StandardEntryType.Dataset;
-                }
             } else if (getUnmappedFields().contains(property.getKey())) {
                 entryMap.put(new UnknownField(property.getKey()), property.getValue());
             }
         }
 
         // Translate CFF author format to JabRef author format
-        String authorStr = citation.authors.stream()
-                        .map(author -> author.values)
-                        .map(vals -> vals.get("name") != null ?
-                                new Author(vals.get("name"), "", "", "", "") :
-                                new Author(vals.get("given-names"), null, vals.get("name-particle"),
-                                        vals.get("family-names"), vals.get("name-suffix")))
-                        .collect(AuthorList.collect())
-                        .getAsFirstLastNamesWithAnd();
-        entryMap.put(StandardField.AUTHOR, authorStr);
+        entryMap.put(StandardField.AUTHOR, parseAuthors(citation.authors));
 
         // Select DOI to keep
         if ((entryMap.get(StandardField.DOI) == null) && (citation.ids != null)) {
             List<CffIdentifier> doiIds = citation.ids.stream()
                             .filter(id -> "doi".equals(id.type))
-                            .collect(Collectors.toList());
+                            .toList();
             if (doiIds.size() == 1) {
                 entryMap.put(StandardField.DOI, doiIds.getFirst().value);
             }
@@ -135,7 +152,7 @@ public class CffImporter extends Importer {
             List<String> swhIds = citation.ids.stream()
                                            .filter(id -> "swh".equals(id.type))
                                            .map(id -> id.value)
-                                           .collect(Collectors.toList());
+                                           .toList();
 
             if (swhIds.size() == 1) {
                 entryMap.put(BiblatexSoftwareField.SWHID, swhIds.getFirst());
@@ -143,7 +160,7 @@ public class CffImporter extends Importer {
                 List<String> relSwhIds = swhIds.stream()
                                                .filter(id -> id.split(":").length > 3) // quick filter for invalid swhids
                                                .filter(id -> "rel".equals(id.split(":")[2]))
-                                               .collect(Collectors.toList());
+                                               .toList();
                 if (relSwhIds.size() == 1) {
                     entryMap.put(BiblatexSoftwareField.SWHID, relSwhIds.getFirst());
                 }
@@ -152,9 +169,23 @@ public class CffImporter extends Importer {
 
         BibEntry entry = new BibEntry(entryType);
         entry.setField(entryMap);
-
-        List<BibEntry> entriesList = new ArrayList<>();
         entriesList.add(entry);
+
+        // Handle `preferred-citation` field
+        if (citation.citation != null) {
+            HashMap<Field, String> preferredEntryMap = new HashMap<>();
+            EntryType preferredEntryType = typeMap.getOrDefault(citation.citation.type, StandardEntryType.Article);
+            for (Map.Entry<String, String> property : citation.citation.values.entrySet()) {
+                if (fieldMap.containsKey(property.getKey())) {
+                    preferredEntryMap.put(fieldMap.get(property.getKey()), property.getValue());
+                }
+            }
+
+            preferredEntryMap.put(StandardField.AUTHOR, parseAuthors(citation.citation.authors));
+            BibEntry preferredEntry = new BibEntry(preferredEntryType);
+            preferredEntry.setField(preferredEntryMap);
+            entriesList.add(preferredEntry);
+        }
 
         return new ParserResult(entriesList);
     }
@@ -185,7 +216,26 @@ public class CffImporter extends Importer {
         fieldMappings.put("message", StandardField.COMMENT);
         fieldMappings.put("date-released", StandardField.DATE);
         fieldMappings.put("keywords", StandardField.KEYWORDS);
+
+        // specific to preferred-citation
+        fieldMappings.put("month", StandardField.MONTH);
+        fieldMappings.put("year", StandardField.YEAR);
         return fieldMappings;
+    }
+
+    private HashMap<String, EntryType> getTypeMappings() {
+        HashMap<String, EntryType> typeMappings = new HashMap<>();
+        typeMappings.put("article", StandardEntryType.Article);
+        typeMappings.put("book", StandardEntryType.Book);
+        typeMappings.put("pamphlet", StandardEntryType.Booklet);
+        typeMappings.put("conference-paper", StandardEntryType.InProceedings);
+        typeMappings.put("misc", StandardEntryType.Misc);
+        typeMappings.put("manual", StandardEntryType.Manual);
+        typeMappings.put("software", StandardEntryType.Software);
+        typeMappings.put("dataset", StandardEntryType.Dataset);
+        typeMappings.put("report", StandardEntryType.Report);
+        typeMappings.put("unpublished", StandardEntryType.Unpublished);
+        return typeMappings;
     }
 
     private List<String> getUnmappedFields() {
@@ -197,5 +247,16 @@ public class CffImporter extends Importer {
         fields.add("repository-artifact");
 
         return fields;
+    }
+
+    private String parseAuthors(List<CffAuthor> authors) {
+        return authors.stream()
+                      .map(author -> author.values)
+                      .map(vals -> vals.get("name") != null ?
+                              new Author(vals.get("name"), "", "", "", "") :
+                              new Author(vals.get("given-names"), null, vals.get("name-particle"),
+                                      vals.get("family-names"), vals.get("name-suffix")))
+                      .collect(AuthorList.collect())
+                      .getAsFirstLastNamesWithAnd();
     }
 }
